<resources>
    <string name="app_name">MyRukunShalatApp</string>
    <string name="detail">Detail</string>
    <string name="baca_selengkapnya">BACA SELENGKAPNYA</string>
    <string name="rukun_shalat">Rukun Shalat</string>
    <string name="todo">TODO</string>
    <string name="share_to_your_friend">Share to Your Friend</string>
    <string name="description">Description</string>
    <string name="description1">Description</string>
    <string name="title">Title</string>
</resources>